issue 94 - fix grid overflow problem

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -46,6 +46,11 @@ body {
   }
 }
 
+.main {
+  width: 100%;
+  overflow: hidden;
+}
+
 /* helper to hide meta elements */
 .is-hidden {
   display: none;
